@@ -25,7 +25,7 @@
  */
 
 /* Core FTPD module
- * $Id: mod_core.c,v 1.351 2009-06-09 16:07:07 castaglia Exp $
+ * $Id: mod_core.c,v 1.352 2009-06-30 17:22:12 castaglia Exp $
  */
 
 #include "conf.h"
@@ -2191,10 +2191,15 @@ MODRET set_allowoverride(cmd_rec *cmd) {
      cmd->config->config_type : cmd->server->config_type ?
      cmd->server->config_type : CONF_ROOT);
 
-  /* This directive must have either 1 or 3 arguments */
-  if (cmd->argc-1 != 1 && cmd->argc-1 != 3)
-    CONF_ERROR(cmd, "missing arguments");
+  /* This directive must have either 1 argument; the 3 arguments format is
+   * now deprecated.
+   */
+  if (cmd->argc-1 == 3) {
+    CONF_ERROR(cmd, pstrcat(cmd->tmp_pool, "Please use mod_ifsession for "
+      "per-user/group/class conditional configuration", NULL));
+  }
 
+  CHECK_ARGS(cmd, 1);
   CHECK_CONF(cmd, CONF_ROOT|CONF_VIRTUAL|CONF_GLOBAL|CONF_ANON|CONF_DIR);
 
   bool = get_boolean(cmd, 1);
@@ -2204,86 +2209,25 @@ MODRET set_allowoverride(cmd_rec *cmd) {
   /* Set the precedence for this config_rec based on its configuration
    * context.
    */
-  if (ctxt & CONF_GLOBAL)
+  if (ctxt & CONF_GLOBAL) {
     precedence = 1;
 
   /* These will never appear simultaneously */
-  else if (ctxt & CONF_ROOT || ctxt & CONF_VIRTUAL)
+  } else if (ctxt & CONF_ROOT || ctxt & CONF_VIRTUAL) {
     precedence = 2;
 
-  else if (ctxt & CONF_ANON)
+  } else if (ctxt & CONF_ANON) {
     precedence = 3;
 
-  else if (ctxt & CONF_DIR)
+  } else if (ctxt & CONF_DIR) {
     precedence = 4;
-
-  /* If the directive was used with 3 arguments, then the optional
-   * classifiers, and classifier expression, were used.  Make sure that
-   * a valid classifier was used.
-   */
-  if (cmd->argc-1 == 3) {
-    if (strcmp(cmd->argv[2], "user") == 0 ||
-        strcmp(cmd->argv[2], "group") == 0 ||
-        strcmp(cmd->argv[2], "class") == 0) {
-
-      /* no-op */
-
-    } else
-      return PR_ERROR_MSG(cmd, NULL, pstrcat(cmd->tmp_pool, cmd->argv[0],
-        ": unknown classifier used: '", cmd->argv[2], "'", NULL));
   }
 
-  if (cmd->argc-1 == 1) {
-    c = add_config_param(cmd->argv[0], 2, NULL, NULL);
-    c->argv[0] = pcalloc(c->pool, sizeof(int));
-    *((int *) c->argv[0]) = bool;
-    c->argv[1] = pcalloc(c->pool, sizeof(unsigned int));
-    *((unsigned int *) c->argv[1]) = precedence;
-
-  } if (cmd->argc-1 == 3) {
-    array_header *acl = NULL;
-    int argc = cmd->argc - 3;
-    char **argv = cmd->argv + 2;
-
-    acl = pr_expr_create(cmd->tmp_pool, &argc, argv);
-
-    c = add_config_param(cmd->argv[0], 0);
-    c->argc = argc + 3;
-
-    /* Add 4 to argc for the argv of the config_rec: one for the
-     * precedence, one for the compiled regexp pointer, one for the
-     * classifier, and one for the terminating NULL.
-     */
-    c->argv = pcalloc(c->pool, ((argc + 4) * sizeof(char *)));
-
-    /* Capture the config_rec's argv pointer for doing the by-hand
-     * population.
-     */
-    argv = (char **) c->argv;
-
-    /* Copy in the boolean argument */
-    *argv = pcalloc(c->pool, sizeof(int));
-    *((int *) *argv++) = bool;
-
-    /* Copy in the precedence. */
-    *argv = pcalloc(c->pool, sizeof(unsigned int));
-    *((unsigned int *) *argv++) = precedence;
-
-    /* copy in the classifier */
-    *argv++ = pstrdup(c->pool, cmd->argv[2]);
-
-    /* Now, copy in the expression arguments */
-    if (argc && acl) {
-      while (argc--) {
-        *argv++ = pstrdup(c->pool, *((char **) acl->elts));
-        acl->elts = ((char **) acl->elts) + 1;
-      }
-    }
-
-    /* Don't forget the terminating NULL */
-    *argv = NULL;
-  }
-
+  c = add_config_param(cmd->argv[0], 2, NULL, NULL);
+  c->argv[0] = pcalloc(c->pool, sizeof(int));
+  *((int *) c->argv[0]) = bool;
+  c->argv[1] = pcalloc(c->pool, sizeof(unsigned int));
+  *((unsigned int *) c->argv[1]) = precedence;
   c->flags |= CF_MERGEDOWN_MULTI;
 
   return PR_HANDLED(cmd);
