@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1038 2009-06-30 16:53:17 castaglia Exp $
+$Id: NEWS,v 1.1039 2009-06-30 17:22:12 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -120,6 +120,10 @@ CVS
 - Bug 3258 - Log cluttered with "using sendfile capability" messages.
 - Bug 3261 - Badly formatted TLSRenegotiate directive causes proftpd to hang.
 - Bug 3257 - CAP_AUDIT_WRITE capability needed for some PAM modules.
+- Bug 3243 - Broken support for AllowOverride per user/group/class conditionals.
+  The user/group/class conditional arguments to the AllowOverride directive
+  were not properly honored.  The fix for this is to remove all support in
+  the AllowOverride directive, and instead use mod_ifsession for conditionals.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
